tests/expectations/compiler/finalize/set_incorrect_type_fail.out
Error [ETYC0372117]: Expected type `Token` but type `u128` was found.
    --> compiler-test:17:32
     |
  17 |     Mapping::set(tokens, addr, amount);
     |                                ^^^^^^
Error [ETYC0372117]: Expected type `Token` but type `u128` was found.
    --> compiler-test:18:22
     |
  18 |     tokens.set(addr, amount);
     |                      ^^^^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:19:27
     |
  19 |     Mapping::set(amounts, 1u8, amount);
     |                           ^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:20:17
     |
  20 |     amounts.set(1u8, amount);
     |                 ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:21:33
     |
  21 |     Mapping::set(amounts, addr, 1u8);
     |                                 ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:22:23
     |
  22 |     amounts.set(addr, 1u8);
     |                       ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:23:66
     |
  23 |     Mapping::set(tokens, addr, Token { owner_addr: addr, amount: 1u8 });
     |                                                                  ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:24:56
     |
  24 |     tokens.set(addr, Token { owner_addr: addr, amount: 1u8 });
     |                                                        ^^^
